adjusted setVel controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "uart.h": "c"
+        "uart.h": "c",
+        "sensorenspi.h": "c",
+        "motor.h": "c"
     }
 }
