Everything is up to date and works fine.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "uart.h": "c",
         "sensorenspi.h": "c",
-        "motor.h": "c"
+        "motor.h": "c",
+        "reglertrajektorienfolge.h": "c"
     }
 }
